# shopman-payman

./: README.md  payman_test_settings.py  pyproject.toml
shopman/payman/: __init__.py  admin.py  apps.py  exceptions.py  protocols.py  service.py
shopman/payman/api/: serializers.py  urls.py  views.py
shopman/payman/migrations/: 0001_initial.py
shopman/payman/models/: __init__.py  intent.py  transaction.py
shopman/payman/signals/: __init__.py
shopman/payman/tests/: test_models.py  test_service.py  test_signals.py  test_transitions.py
