[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopman-payman"
version = "0.1.0"
description = "Shopman Payman — Payment Intents & Transactions"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "shopman-utils",
]

[project.optional-dependencies]
unfold = [
    "django-unfold>=0.80,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
]

[tool.setuptools.packages.find]
include = ["shopman.payman*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "payman_test_settings"
pythonpath = ["."]
